# BCryptCpp

./: CMakeLists.txt  License.md  Test.cpp  TestResult.txt
include/: bcrypt.h
src/: bcrypt.cpp
